# inquisitive

./: Pipfile  README.md  pyproject.toml  requirements.txt
quiz_app/: asgi.py  settings.py  urls.py  wsgi.py
quiz_app/api/: __init__.py  apps.py  authentication.py  serializers.py  urls.py
quiz_app/api/migrations/: 0001_initial.py  0002_auto_20200729_1354.py  0003_answer_attempt_profile_question_quiz.py  0004_alter_attempt_unanswered.py
quiz_app/api/models/: __init__.py  profile.py  quiz.py  user.py
quiz_app/api/views/: __init__.py  auth.py  profile.py  quiz.py
