[tool.poetry]
name = "inquisitive"
version = "0.1.0"
description = ""
authors = ["trucktar <57882685+trucktar@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0"
django-environ = "^0.8.1"
psycopg2 = "^2.9.2"
djangorestframework = "^3.12.4"
PyJWT = "^2.3.0"
gunicorn = "^20.1.0"
django-cors-headers = "^3.10.1"
pytz = "^2021.3"

[tool.poetry.dev-dependencies]
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
